--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -166,7 +166,7 @@
         --cm-var-color: #5668a4;
         --cm-var2-color: #06b6ef;
         --cm-builtin-color: #5e7ad3;
-        --cm-def-color: #f99b15;
+        --cm-def-color: #e28f7f;
         --cm-bracket-color: #41323f;
         --cm-tag-color: #ef6155;
         --cm-link-color: #815ba4;
