--- a/frontend/dark_color.css
+++ b/frontend/dark_color.css
@@ -162,6 +162,7 @@
         --cm-string-color: hsl(20deg 69% 59%);
         --cm-var-color: #afb7d3;
         --cm-var2-color: #06b6ef;
+        --cm-macro-color: #82b38b;
         --cm-builtin-color: #5e7ad3;
         --cm-def-color: #f99b15;
         --cm-bracket-color: #a2a273;
