--- a/frontend/dark_color.css
+++ b/frontend/dark_color.css
@@ -165,6 +165,7 @@
         --cm-macro-color: #82b38b;
         --cm-builtin-color: #5e7ad3;
         --cm-def-color: #f99b15;
+        --cm-type-color: darkblue;
         --cm-bracket-color: #a2a273;
         --cm-tag-color: #ef6155;
         --cm-link-color: #815ba4;
