--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -168,6 +168,7 @@
         --cm-macro-color: #5c8c5f;
         --cm-builtin-color: #5e7ad3;
         --cm-def-color: #cc80ac;
+        --cm-type-color: lightblue;
         --cm-bracket-color: #41323f;
         --cm-tag-color: #ef6155;
         --cm-link-color: #815ba4;
