--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -164,7 +164,7 @@
         --cm-keyword-color: #ef6155;
         --cm-string-color: #da5616;
         --cm-var-color: #5668a4;
-        --cm-var2-color: #06b6ef;
+        --cm-var2-color: #37768a;
         --cm-builtin-color: #5e7ad3;
         --cm-def-color: #f99b15;
         --cm-bracket-color: #41323f;
