--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -167,7 +167,7 @@
         --cm-macro-color: #5c8c5f;
         --cm-var2-color: #37768a;
         --cm-builtin-color: #5e7ad3;
-        --cm-def-color: #cc80ac;
+        --cm-function-color: #cc80ac;
         --cm-type-color: lightblue;
         --cm-bracket-color: #41323f;
         --cm-tag-color: #ef6155;
