--- a/frontend/dark_color.css
+++ b/frontend/dark_color.css
@@ -157,14 +157,14 @@
         --cm-comment-color: #e96ba8;
         --cm-atom-color: hsl(8deg 72% 62%);
         --cm-number-color: hsl(271deg 45% 64%);
-        --cm-property-color: #48b685;
+        --cm-property-color: #f99b15;
         --cm-keyword-color: #ff7a6f;
         --cm-string-color: hsl(20deg 69% 59%);
         --cm-var-color: #afb7d3;
         --cm-var2-color: #06b6ef;
         --cm-macro-color: #82b38b;
         --cm-builtin-color: #5e7ad3;
-        --cm-def-color: #f99b15;
+        --cm-function-color: #f99b15;
         --cm-type-color: darkblue;
         --cm-bracket-color: #a2a273;
         --cm-tag-color: #ef6155;
