--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2671,7 +2671,7 @@ pluto-output > assignee {
 }
 
 .cm-completionIcon-c_Function::before {
-    color: var(--cm-def-color);
+    color: var(--cm-function-color);
 }
 
 .cm-completionIcon-c_Array::before {
