Restore balance to the light side

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2554,7 +2554,7 @@ Based on "Paraíso (Light)" by Jan T. Sott:
 .cm-editor .cm-tooltip.cm-tooltip-autocomplete li.c_from_notebook .cm-completionLabel {
     font-weight: bold;
     text-decoration: underline;
-    text-decoration-color: #5d5f70;
+    text-decoration-color: #ced2ef;
     text-decoration-thickness: 3px;
     text-decoration-skip-ink: none;
 }
