--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2559,6 +2559,12 @@ Based on "Paraíso (Light)" by Jan T. Sott:
     text-decoration-skip-ink: none;
 }
 
+@media (prefers-color-scheme: dark) {
+    [data-pluto-variable] {
+        text-decoration-color: #5d5f70;
+    }
+}
+
 body.ctrl_down [data-pluto-variable],
 body.ctrl_down [data-cell-variable] {
     text-decoration-color: #d177e6;
@@ -2666,7 +2672,7 @@ pluto-output > assignee {
 }
 
 .cm-completionIcon-c_Function::before {
-    color: var(--cm-def-color);
+    color: var(--cm-function-color);
 }
 
 .cm-completionIcon-c_Array::before {
