--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1007,15 +1007,6 @@ pluto-output {
     background-color: var(--pluto-output-bg-color);
 }
 
-pluto-cell.depends_on_disabled_cells > pluto-output,
-pluto-cell.running_disabled > pluto-output {
-    opacity: 0.3;
-}
-
-pluto-cell.running_disabled > pluto-output {
-    background-color: var(--disabled-cell-bg-color);
-}
-
 .scroll_y {
     overflow-y: auto;
     max-height: 80vh;
@@ -1075,6 +1066,24 @@ pluto-display > div {
 }
 .hidden-cell {
     display: none;
+}
+
+/* DISABLED CELLS */
+
+pluto-cell.depends_on_disabled_cells > pluto-output,
+pluto-cell.running_disabled > pluto-output,
+pluto-cell.depends_on_disabled_cells > pluto-trafficlight,
+pluto-cell.running_disabled > pluto-trafficlight,
+pluto-cell.depends_on_disabled_cells > pluto-input .cm-editor,
+pluto-cell.running_disabled > pluto-input .cm-editor,
+pluto-cell.depends_on_disabled_cells > pluto-logs-container,
+pluto-cell.running_disabled > pluto-logs-container {
+    opacity: 0.3;
+}
+
+pluto-cell.running_disabled > pluto-input .cm-editor,
+pluto-cell.running_disabled > pluto-output {
+    background-color: var(--disabled-cell-bg-color);
 }
 
 /* SELECTION */
@@ -1160,15 +1169,6 @@ pluto-cell:not(.show_input) > pluto-input {
 pluto-cell.code_differs > pluto-input > .cm-editor {
     border: 1px solid var(--code-differs-cell-color);
     border-left: none;
-}
-
-pluto-cell.depends_on_disabled_cells > pluto-input .cm-editor,
-pluto-cell.running_disabled > pluto-input .cm-editor {
-    opacity: 0.3;
-}
-
-pluto-cell.running_disabled > pluto-input .cm-editor {
-    background-color: var(--disabled-cell-bg-color);
 }
 
 /* UI */
@@ -1385,11 +1385,6 @@ body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
     background-size: 4px var(--patternHeight); /* 16 * sqrt(2) */
 }
 
-pluto-cell.depends_on_disabled_cells > pluto-trafficlight,
-pluto-cell.running_disabled > pluto-trafficlight {
-    opacity: 0.3;
-}
-
 /* Define --patternHeight for this keyframes animation to work! */
 @keyframes scrollbackground {
     0% {
@@ -1563,12 +1558,7 @@ pluto-input > button.input_context_menu ul {
     background-color: var(--input-context-menu-hover-bg-color);
 }
 
-.disable_cell_icon,
-.delete_icon,
-.enable_cell_icon,
-.bandage_icon,
-.show_logs_icon,
-.hide_logs_icon,
+.ctx_icon,
 .icon {
     --size: 17px;
     width: var(--size);
@@ -1578,33 +1568,33 @@ pluto-input > button.input_context_menu ul {
     background-position: center;
     margin-right: calc(var(--size) / 3);
 }
-.show_logs_icon {
+
+.ctx_icon {
+    filter: var(--image-filters);
+}
+.ctx_icon.show_logs {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-text-outline.svg);
 }
 
-.hide_logs_icon {
+.ctx_icon.hide_logs {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/document-text-outline.svg);
 }
 
-.bandage_icon {
-    filter: opacity(0.3);
+.ctx_icon.bandage {
+    filter: var(--image-filters) opacity(0.3);
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/bandage-outline.svg);
-    filter: var(--image-filters);
 }
-.enable_cell_icon {
+.ctx_icon.enable_cell {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-forward-circle-outline.svg);
-    filter: var(--image-filters);
 }
 
-.disable_cell_icon {
+.ctx_icon.disable_cell {
     background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/ban-outline.svg");
     background-size: 15px;
     background-repeat: no-repeat;
-    filter: var(--image-filters);
 }
-.delete_icon {
+.ctx_icon.delete {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-circle-outline.svg);
-    filter: var(--image-filters);
 }
 
 pluto-input > button.input_context_menu {
