--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2742,3 +2742,40 @@ pluto-cell.hooked_up pluto-output {
     border-bottom: solid 2px;
     border-color: var(--pluto-cell-force-color);
 }
+
+.nested-markdown-syntax-heading {
+    color: #232227;
+    font-weight: 500;
+}
+.nested-markdown-syntax-heading-h1 {
+    font-size: 1.5rem;
+    --nested-markdown-font-size: 1.5rem;
+}
+.nested-markdown-syntax-heading-h2 {
+    font-size: 1.4rem;
+    --nested-markdown-font-size: 1.4rem;
+}
+.nested-markdown-syntax-heading-h3 {
+    font-size: 1.25rem;
+    --nested-markdown-font-size: 1.25rem;
+}
+.nested-markdown-syntax-heading-h4 {
+    font-size: 1.1rem;
+    --nested-markdown-font-size: 1.1rem;
+}
+.nested-markdown-syntax-heading-h5 {
+    font-size: 1rem;
+    --nested-markdown-font-size: 1rem;
+}
+.nested-markdown-syntax-code {
+    font-family: JuliaMono, monospace;
+    font-size: 0.75rem;
+    line-height: 1;
+    font-weight: 700;
+    color: var(--pluto-accent-color);
+    font-size: calc(var(--nested-markdown-font-size, 1rem) * 0.75);
+}
+
+.but-javascript {
+    background-color: red;
+}
