--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2744,8 +2744,9 @@ pluto-cell.hooked_up pluto-output {
 }
 
 .nested-markdown-syntax-heading {
-    color: #232227;
+    color: var(--pluto-output-color, #232227);
     font-weight: 500;
+    font-family: Vollkorn, serif;
 }
 .nested-markdown-syntax-heading-h1 {
     font-size: 1.5rem;
@@ -2767,13 +2768,18 @@ pluto-cell.hooked_up pluto-output {
     font-size: 1rem;
     --nested-markdown-font-size: 1rem;
 }
+.nested-markdown-syntax-heading-h6 {
+    color: var(--pluto-output-color, #232227);
+    font-weight: bold;
+    font-size: 0.8em;
+}
+
 .nested-markdown-syntax-code {
     font-family: JuliaMono, monospace;
-    font-size: 0.75rem;
     line-height: 1;
     font-weight: 700;
     color: var(--pluto-accent-color);
-    font-size: calc(var(--nested-markdown-font-size, 1rem) * 0.75);
+    font-size: calc(var(--nested-markdown-font-size, 1rem) * 0.8);
 }
 
 .but-javascript {
