Pattern matching system for lezer code (and use it in scope traversal) (#1849)

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2559,7 +2559,9 @@ body.ctrl_down [data-cell-variable] {
 }
 body.ctrl_down [data-pluto-variable]:hover,
 body.ctrl_down [data-pluto-variable]:hover * {
-    color: #af5bc3 !important;
+    /* This basically `color: #af5bc3`, but it works for emoji too!! */
+    color: transparent !important;
+    text-shadow: 0 0 #af5bc3;
 }
 
 /* Variable that is declared in the same cell */
@@ -2568,7 +2570,9 @@ body.ctrl_down [data-pluto-variable]:hover * {
     text-decoration: none;
 }
 body.ctrl_down [data-cell-variable]:hover * {
-    color: #af5bc3 !important;
+    /* This basically `color: #af5bc3`, but it works for emoji too!! */
+    color: transparent !important;
+    text-shadow: 0 0 #af5bc3;
 }
 
 .cm-tooltip.cm-tooltip-autocomplete {
@@ -2673,6 +2677,18 @@ pluto-output > assignee {
 
 .cm-editor .cm-activeLine {
     background: unset;
+}
+
+.cm-selectionMatch {
+    background: none !important;
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+}
+
+@media (prefers-color-scheme: dark) {
+    .cm-selectionMatch {
+        background: none !important;
+        text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
+    }
 }
 
 .cm-editor .cm-matchingBracket,
