--- a/frontend/light_color.css
+++ b/frontend/light_color.css
@@ -132,7 +132,7 @@
         --helpbox-notfound-header-color: rgb(139, 139, 139);
         --helpbox-text-color: black;
         --code-section-bg-color: whitesmoke;
-        --code-section-bg-color: #dbdbdb;
+        --code-section-bg-color: #f3f3f3;
 
         /*footer*/
         --footer-color: #333333;
