--- a/frontend/index.css
+++ b/frontend/index.css
@@ -175,6 +175,7 @@ pluto-filepicker button {
 .cm-editor .cm-tooltip.cm-tooltip-autocomplete > ul > li {
     /* this is the line height rounded to an integer to prevent jiggle */
     height: 16px;
+    overflow-y: hidden;
     /* font-size: 16px; */
     line-height: 16px;
     border-radius: 3px;
