--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -28,6 +28,7 @@
     /* use the value "contextual" to enable contextual ligatures `document.documentElement.style.setProperty('--pluto-operator-ligatures', 'contextual');`
         for julia mono see here: https://cormullion.github.io/pages/2020-07-26-JuliaMono/#contextual_and_stylistic_alternates_and_ligatures */
     --pluto-operator-ligatures: none;
+    --julia-mono-font-stack: JuliaMono, Menlo, "Roboto Mono", "Lucida Sans Typewriter", "Source Code Pro", monospace;
     --sans-serif-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
     color-scheme: light dark;
@@ -222,13 +223,13 @@ a:hover {
 }
 
 pluto-output code {
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
     font-size: 0.75em; /* not rem */
     font-variant-ligatures: none;
 }
 
 pluto-output code .cm-editor .cm-line {
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
 }
 
 pluto-output pre > code {
@@ -253,7 +254,7 @@ pluto-output pre {
     word-break: break-all;
     tab-size: 4;
     -moz-tab-size: 4; /* https://bugzilla.mozilla.org/show_bug.cgi?id=737785 */
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
     font-size: 0.75rem;
     font-variant-ligatures: none;
 }
@@ -406,7 +407,7 @@ pluto-output table > thead {
 }
 
 pluto-output table > tbody td {
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
     font-size: 0.75rem;
     font-variant-ligatures: none;
 }
@@ -720,7 +721,7 @@ body.binder > header > nav#at_the_top > pluto-filepicker > * {
 body.binder > header > nav#at_the_top > pluto-filepicker > a {
     display: block;
     font-size: 16px;
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
     opacity: 0.8;
     text-decoration: none;
 }
@@ -1024,7 +1025,7 @@ pluto-output:not(.rich_output) {
 }
 
 pluto-output > assignee {
-    font-family: JuliaMono, monospace;
+    font-family: var(--julia-mono-font-stack);
     font-size: 0.75rem;
     font-variant-ligatures: none;
 }
@@ -2077,7 +2078,7 @@ pluto-helpbox > section hr {
 .pluto-docs-binding > span {
     display: inline-block;
     transform: translate(-19px, -16px);
-    font-family: "JuliaMono", monospace;
+    font-family: var(--julia-mono-font-stack);
     font-size: 0.9rem;
     font-weight: 700;
     margin-top: -1em;
@@ -2518,7 +2519,7 @@ pluto-input .cm-editor .cm-tooltip.cm-tooltip-autocomplete > ul > li {
 .cm-completionIcon::before {
     /* TODO This loses all color when it's not font-family: JuliaMono, which can happen */
     content: "⚫";
-    font-family: JuliaMono, monospace !important;
+    font-family: var(--julia-mono-font-stack) !important;
     color: transparent;
     font-size: 0.75rem;
     margin-right: 0.5em;
@@ -2585,7 +2586,7 @@ Based on "Paraíso (Light)" by Jan T. Sott:
 pluto-input .cm-editor .cm-content,
 pluto-input .cm-editor .cm-scroller,
 .cm-editor .cm-tooltip-autocomplete .cm-completionLabel {
-    font-family: JuliaMono, monospace !important;
+    font-family: var(--julia-mono-font-stack) !important;
     font-variant-ligatures: none;
     font-size: 0.75rem;
 }
